change get all tasks